namespace/media/tdarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
  namespace: media
  labels:
    app.kubernetes.io/name: tdarr
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tdarr
      app.kubernetes.io/managed-by: flux
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tdarr
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: nvidia
      securityContext:
        supplementalGroups:
          - 44
      containers:
        - name: tdarr
        # renovate: datasource=docker depName=ghcr.io/haveagitgat/tdarr
          image: ghcr.io/haveagitgat/tdarr:latest@sha256:69d28aff66318ecc1c9496717c1731fbdbbfb8c0c4664a90bbb36747fbf279fe
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8265
              protocol: TCP
            - containerPort: 8266
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "4"
              memory: "4Gi"
              nvidia.com/gpu: "1"
          volumeMounts:
            - name: config
              mountPath: /app/configs
            - name: server
              mountPath: /app/server
            - name: logs
              mountPath: /app/logs
            - name: media
              mountPath: /media
              subPath: media
            - name: temp
              mountPath: /temp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: tdarr-config
        - name: server
          persistentVolumeClaim:
            claimName: tdarr-server
        - name: logs
          persistentVolumeClaim:
            claimName: tdarr-logs
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: temp
          persistentVolumeClaim:
            claimName: tdarr-temp
