namespace/media/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
  namespace: media
spec:
  selector:
    app: tdarr
  ports:
    - port: 8265
      targetPort: 8265
      protocol: TCP
      name: tdarr-ui
    - port: 8266
      targetPort: 8266
      protocol: TCP
      name: tdarr-server
  type: ClusterIP
