namespace/media/tdarr/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: tdarr
          port: 8265
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tdarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`tdarr.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: tdarr
          port: 8265
